--- a/package.json
+++ b/package.json
@@ -2,23 +2,29 @@
   "name": "react-website-smooth-scroll-v1",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://junwei17.github.io",
   "dependencies": {
+    "-": "^0.0.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "gh-pages": "^4.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "3.4.3",
     "react-scroll": "^1.8.1",
+    "save-dev": "^0.0.1-security",
     "styled-components": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
